--- a/index.html
+++ b/index.html
@@ -6,41 +6,123 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Флагиан Консалтинг</title>
-    <link type="image/svg" sizes="16x16" href="../../IPAP%20vanya-1/images/Python-logo-notext.svg">
+    <!--    <link type="image/svg" sizes="16x16" href="../../IPAP%20vanya-1/images/Python-logo-notext.svg">-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link type="text/css" rel="stylesheet" href="../../IPAP%20vanya-1/css/style.css">
+    <link type="text/css" rel="stylesheet" href="css/style.css">
+
     <style>
-        @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oswald:wght@200..700&display=swap');
     </style>
+
 </head>
 <body>
-<!--Главный контейнер-->
+
+<!-- Главный контейнер -->
 <div class="container">
-    <!--шапка-->
+    <!-- шапка -->
     <header>
-        <ul class="nav justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Active</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-            </li>
-        </ul>
+        <!--     OFFcanvas  навигация -->
+        <nav class="navbar bg-body-tertiary fixed-top">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Навигационная панель Offcanvas</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                     aria-labelledby="offcanvasNavbarLabel">
+                    <div class="offcanvas-header">
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Флагман Консалтинг</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Главная</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">+7 911 199-79-72</a>
+                            </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    Выпадающий список
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Консалтинг</a></li>
+
+                                    <li><a class="dropdown-item" href="#">Оценка</a></li>
+                                    <li>
+                                        <hr class="dropdown-divider">
+                                    </li>
+                                    <li><a class="dropdown-item" href="#">ТренингиЭксперты</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="d-flex mt-3" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
+                            <button class="btn btn-outline-success" type="submit">Поиск</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <!--       навигация -->
+        <h1>ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>
     </header>
-    <!--    шапка закончилась-->
+    <!-- end of шапка -->
+    <!--карусель Целевые аудитории для оценки-->
+<!--    <h2 class="montserrat-alternates-bold">Целевые аудитории для оценки</h2>-->
+<!--    <div id="carouselExampleCaptions" class="carousel slide">-->
+<!--        <div class="carousel-indicators">-->
+<!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"-->
+<!--                    aria-current="true" aria-label="Slide 1"></button>-->
+<!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"-->
+<!--                    aria-label="Slide 2"></button>-->
+<!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"-->
+<!--                    aria-label="Slide 3"></button>-->
+<!--        </div>-->
+<!--        <div class="carousel-inner">-->
+<!--            <div class="carousel-item active">-->
+<!--                <img src="..." class="d-block w-100" alt="...">-->
+<!--                <div class="carousel-caption d-none d-md-block">-->
+<!--                    <h5>Метка первого слайда</h5>-->
+<!--                    <p>Некоторый репрезентативный заполнитель для первого слайда.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="carousel-item">-->
+<!--                <img src="..." class="d-block w-100" alt="...">-->
+<!--                <div class="carousel-caption d-none d-md-block">-->
+<!--                    <h5>Метка второго слайда</h5>-->
+<!--                    <p>Некоторый репрезентативный заполнитель для второго слайда.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="carousel-item">-->
+<!--                <img src="..." class="d-block w-100" alt="...">-->
+<!--                <div class="carousel-caption d-none d-md-block">-->
+<!--                    <h5>Метка третьего слайда</h5>-->
+<!--                    <p>Некоторый репрезентативный заполнитель для третьего слайда.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"-->
+<!--                data-bs-slide="prev">-->
+<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--            <span class="visually-hidden">Предыдущий</span>-->
+<!--        </button>-->
+<!--        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"-->
+<!--                data-bs-slide="next">-->
+<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--            <span class="visually-hidden">Следующий</span>-->
+<!--        </button>-->
+<!--    </div>-->
+    <!-- end of Карусель Целевые аудитории для оценки-->
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+<!-- end of Главный контейнер -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
 </body>
 </html>
