--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Флагиан Консалтинг</title>
-<!--        <link rel="icon" type="image/svg+xml" sizes="any" href="/путь_к_файлу/favicon.svg">-->
+<!--            <link rel="icon" type="image/svg+xml" sizes="any" href="images/favicon.svg">-->
+            <link rel="icon" type="image/png" sizes="96x96" href="images/favicon.png">
+            <link rel="icon" type="image/svg" sizes="any" href="images/favicon.svg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link type="text/css" rel="stylesheet" href="css/style.css">
@@ -23,9 +25,10 @@
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
-        <nav class="navbar navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-dark nav_flag fixed-top">
+<!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Флагман Консалтинг лого</a>
+                <a class="navbar-brand" href="index.html"><img src="images/logo_2.png" alt="Флагман Консалтинг лого"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
                     <span class="navbar-toggler-icon"></span>
@@ -73,7 +76,8 @@
                                     <li>
                                         <hr class="dropdown-divider">
                                     </li>
-                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br> Менеджеров
+                                    <li><a class="dropdown-item" href="#">Для Лидеров коммерческих команд <br>
+                                        Менеджеров
                                         back-office</a></li>
                                 </ul>
 
@@ -87,10 +91,10 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a class="dropdown-item" href="#">Лидеры команды</a></li>
                                     <li><a class="dropdown-item" href="#">Почему выбирают нас</a></li>
-<!--                                    <li>-->
-<!--                                        <hr class="dropdown-divider">-->
-<!--                                    </li>-->
-<!--                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>-->
+                                    <!--                                    <li>-->
+                                    <!--                                        <hr class="dropdown-divider">-->
+                                    <!--                                    </li>-->
+                                    <!--                                    <li><a class="dropdown-item" href="#">Что-то еще здесь</a></li>-->
                                 </ul>
 
                             </li>
@@ -104,21 +108,21 @@
                                 <a class="nav-link" href="#">Контакты. Обратная связь</a>
                             </li>
                         </ul>
-                        <form class="d-flex mt-3" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">
-                            <button class="btn btn-success" type="submit">Поиск</button>
-                        </form>
+<!--                        <form class="d-flex mt-3" role="search">-->
+<!--                            <input class="form-control me-2" type="search" placeholder="Поиск" aria-label="Поиск">-->
+<!--                            <button class="btn btn-success" type="submit">Поиск</button>-->
+<!--                        </form>-->
                     </div>
                 </div>
             </div>
         </nav>
-        <!--       навигация -->
-        <h1>ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>
+        <!--  end of навигация -->
+<!--        <h1 class="montserrat-alternates-bold">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>-->
     </header>
-
     <!-- end of шапка -->
-    <!--карусель Целевые аудитории для оценки-->
-    <!--    <h2 class="montserrat-alternates-bold">Целевые аудитории для оценки</h2>-->
+
+    <!--карусель Целевые аудитории для консалтинга и оценки-->
+    <!--    <h2 class="montserrat-alternates-bold">Целевые аудитории для консалтинга и оценки</h2>-->
     <!--    <div id="carouselExampleCaptions" class="carousel slide">-->
     <!--        <div class="carousel-indicators">-->
     <!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"-->
