--- a/index.html
+++ b/index.html
@@ -122,50 +122,58 @@
     <!-- end of шапка -->
 
     <!--карусель Целевые аудитории для консалтинга и оценки-->
-    <!--    <h2 class="montserrat-alternates-bold">Целевые аудитории для консалтинга и оценки</h2>-->
-    <!--    <div id="carouselExampleCaptions" class="carousel slide">-->
-    <!--        <div class="carousel-indicators">-->
-    <!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"-->
-    <!--                    aria-current="true" aria-label="Slide 1"></button>-->
-    <!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"-->
-    <!--                    aria-label="Slide 2"></button>-->
-    <!--            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"-->
-    <!--                    aria-label="Slide 3"></button>-->
-    <!--        </div>-->
-    <!--        <div class="carousel-inner">-->
-    <!--            <div class="carousel-item active">-->
-    <!--                <img src="..." class="d-block w-100" alt="...">-->
-    <!--                <div class="carousel-caption d-none d-md-block">-->
-    <!--                    <h5>Метка первого слайда</h5>-->
-    <!--                    <p>Некоторый репрезентативный заполнитель для первого слайда.</p>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <div class="carousel-item">-->
-    <!--                <img src="..." class="d-block w-100" alt="...">-->
-    <!--                <div class="carousel-caption d-none d-md-block">-->
-    <!--                    <h5>Метка второго слайда</h5>-->
-    <!--                    <p>Некоторый репрезентативный заполнитель для второго слайда.</p>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--            <div class="carousel-item">-->
-    <!--                <img src="..." class="d-block w-100" alt="...">-->
-    <!--                <div class="carousel-caption d-none d-md-block">-->
-    <!--                    <h5>Метка третьего слайда</h5>-->
-    <!--                    <p>Некоторый репрезентативный заполнитель для третьего слайда.</p>-->
-    <!--                </div>-->
-    <!--            </div>-->
-    <!--        </div>-->
-    <!--        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"-->
-    <!--                data-bs-slide="prev">-->
-    <!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-    <!--            <span class="visually-hidden">Предыдущий</span>-->
-    <!--        </button>-->
-    <!--        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"-->
-    <!--                data-bs-slide="next">-->
-    <!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-    <!--            <span class="visually-hidden">Следующий</span>-->
-    <!--        </button>-->
-    <!--    </div>-->
+ <br>
+
+    <div class="row"><!--помещаем в блок для центровки-->
+        <div class="col-10 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
+
+<!--        <h2 class="montserrat-alternates-bold">Целевые аудитории для консалтинга и оценки</h2>-->
+    <br>
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="images/slides/slide1.jpg" class="d-block w-100" alt="Менеджеры по работе с ключевыми клиентами">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Менеджеры по работе с ключевыми клиентами</h5>
+                        <p>Key Account Managers (KAM)</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slides/slide2.jpg" class="d-block w-100" alt="медицинские и аптечные представители">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Полевые силы</h5>
+                        <p>медицинские и аптечные представители</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img src="images/slides/slide3.jpg" class="d-block w-100" alt="Лидеры коммерческих команд">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>Лидеры коммерческих команд</h5>
+                        <p>First Line Managers</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Предыдущий</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                    data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Следующий</span>
+            </button>
+        </div>
+        </div>
+     </div>
     <!-- end of Карусель Целевые аудитории для оценки-->
 </div>
 <!-- end of Главный контейнер -->
