carusel and content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
-        <nav class="navbar navbar-dark nav_flag fixed-top">
+        <nav class="navbar navbar-dark nav_flag">
             <!--            <nav class="navbar navbar-dark bg-dark fixed-top">-->
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html"><img src="images/logo_2.png"
@@ -121,7 +121,13 @@
         <!--        <h1 class="montserrat-alternates-bold">ЦЕНТР РАЗВИТИЯ ПЕРСОНАЛА</h1>-->
     </header>
     <!-- end of шапка -->
-
+    <!--хлебные крошки-->
+        <nav class="crumb" aria-label="breadcrumb">
+        <ol class="breadcrumb ">
+            <li class="breadcrumb-item active " aria-current="page">Главная</li>
+        </ol>
+        </nav>
+    <!--хлебные крошки-->
 
     <!--контент-->
     <div class="row m-5"><!--помещаем в блок для трех колонок-->
@@ -144,7 +150,8 @@
                         <li>Совместное планирование бизнеса</li>
                         <li>Чемпионат по Переговорным поединкам</li>
                         <li>Бизнес-симуляция «Выгодно и точка!» на развитие планирования, управления категорией,
-                            переговоров                        </li>
+                            переговоров
+                        </li>
                         <li>Конкурсы бизнес-кейсов по развитию клиента</li>
                     </ul>
                     </p>
@@ -155,18 +162,19 @@
             <div class="card h-100">
                 <div class="card-body">
                     <h5 class="card-title">Полевые силы</h5>
-                    <img src="images/slides/slide2.jpg" class="card-img-top rounded" alt="Медицинские и аптечные представители">
+                    <img src="images/slides/slide2.jpg" class="card-img-top rounded"
+                         alt="Медицинские и аптечные представители">
                     <p class="card-text">
-                        <ul>
-                            <li>Эффективный визит к врачу</li>
-                            <li>Шаги визита в аптеку</li>
-                            <li>Навыки продаж</li>
-                            <li>Работа с возражениями</li>
-                            <li>Эффективная коммуникация и влияние</li>
-                            <li>Типология личности</li>
-                            <li>Продажа идеи и эффективная аргументация</li>
-                            <li>Финансовая грамотность</li>
-                        </ul>
+                    <ul>
+                        <li>Эффективный визит к врачу</li>
+                        <li>Шаги визита в аптеку</li>
+                        <li>Навыки продаж</li>
+                        <li>Работа с возражениями</li>
+                        <li>Эффективная коммуникация и влияние</li>
+                        <li>Типология личности</li>
+                        <li>Продажа идеи и эффективная аргументация</li>
+                        <li>Финансовая грамотность</li>
+                    </ul>
                     </p>
                 </div>
 
@@ -180,15 +188,15 @@
                     <p class="card-text">
                     <ul>
                         <li>Основы управления</li>
-                    <li>Коучинг, наставничество и обратная связь</li>
-                    <li>Полевой коучинг</li>
-                    <li>Развитие бизнеса на территории</li>
-                    <li>Финансовая грамотность</li>
-                    <li>Ситуационное лидерство</li>
-                    <li>Создание высокоэффективных команд</li>
-                    <li>Мотивация сотрудников</li>
-                    <li>Фасилитация для менеджеров команд</li>
-                    <li>Основы управления</li>
+                        <li>Коучинг, наставничество и обратная связь</li>
+                        <li>Полевой коучинг</li>
+                        <li>Развитие бизнеса на территории</li>
+                        <li>Финансовая грамотность</li>
+                        <li>Ситуационное лидерство</li>
+                        <li>Создание высокоэффективных команд</li>
+                        <li>Мотивация сотрудников</li>
+                        <li>Фасилитация для менеджеров команд</li>
+                        <li>Основы управления</li>
 
                     </ul>
                     </p>
