--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Реализованные проекты <br>Отзывы участников</a>
-                                <a class="nav-link" href="#">О нас</a>
-                                <a class="nav-link" href="#">Контакты. Обратная связь</a>
+                                <a class="nav-link" href="about.html">О нас</a>
+                                <a class="nav-link" href="contacts.html">Контакты. Обратная связь</a>
                             </li>
                         </ul>
                         <!--                        <form class="d-flex mt-3" role="search">-->
@@ -211,7 +211,7 @@
     <div class="row"><!--помещаем в блок для центровки-->
         <div class="col-sm-8 col-centered"><!--в этом блоке всего одна колонка 1/10 от контейнера-->
 
-            <!--        <h2 class="montserrat-alternates-bold">Целевые аудитории для консалтинга и оценки</h2>-->
+                    <h2 class="montserrat-alternates-bold">Целевые аудитории для оценки</h2>
             <br>
             <div id="carouselExampleCaptions" class="carousel slide">
                 <div class="carousel-indicators">
@@ -266,8 +266,8 @@
 <br>
 <footer class="bg-body-tertiary text-center text-lg-start">
     <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-        © 2024 С нами по свету
+    <div class="text-center p-3" style="background-color: rgba(255, 255, 255, 0.05);">
+        © 2024 Флагиан Консалтинг
     </div>
     <!-- Copyright -->
 </footer>
