--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 <!-- Главный контейнер -->
-<div class="container">
+<div class="container-fluid">
     <!-- шапка -->
     <header>
         <!--     OFFcanvas  навигация -->
